--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,44 +1,26 @@
-name: Build and Deploy to Azure Container Instances
+name: Azure Container Apps Deploy
 
 on:
   push:
-  watch:
-    - main
+    branches:
+      - main
 
 jobs:
-  setup-build-publish-deploy:
-    name: Setup, Build, Publish, and Deploy
+  build:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v3
 
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Log in to Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
-
-    - name: Login to Azure
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-    - name: Login to Azure Container Registry
-      run: |
-        echo "${{secrets.REGISTRY_PASSWORD}}" | docker login ${{ secrets.REGISTRY_NAME }}.azurecr.io -u ${{ secrets.REGISTRY_USERNAME }} --password-stdin
-
-    - name: Build and push
-      id: docker_build
-      uses: docker/build-push-action@v2
-      with:
-        context: ./
-        push: true
-        tags: ${{ secrets.REGISTRY_NAME }}.azurecr.io/my-app:${{ github.sha }}
-
-    - name: 'Deploy to Azure Container Instances'
-      uses: 'azure/aci-deploy@v1'
-      with:
-        resource_group: 'myResourceGroup'
-        name: 'myContainerInstance'
-        image: ${{ secrets.REGISTRY_NAME }}.azurecr.io/my-app:${{ github.sha }}
-        region: 'westus'
+      - name: Build and deploy Container App
+        uses: azure/container-apps-deploy-action@v1
+        with:
+          appSourcePath: ${{ github.workspace }}
+          acrName: nursematch
+          containerAppName: dokarecruitmentbackend
+          resourceGroup: dev
