Update deploy.yml with targetPort

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,3 +24,4 @@ jobs:
           acrName: nursematch
           containerAppName: dokarecruitmentbackend
           resourceGroup: dev
+          targetPort: 8080
