--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           appSourcePath: ${{ github.workspace }}
           acrName: nursematch
-          containerAppName: dokarecruitmentbackend
+          containerAppName: backendApi
           resourceGroup: dev
           targetPort: 8080
-          #environmentVariables: "DB_USER=secretref:AZURE_CREDENTIALS DB_PASSWORD=secretref:AZURE_CREDENTIALS DB_SERVER=secretref:AZURE_CREDENTIALS"
+          environmentVariables: "DB_USER=secretref:AZURE_CREDENTIALS DB_PASSWORD=secretref:AZURE_CREDENTIALS DB_SERVER=secretref:AZURE_CREDENTIALS"
