--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,4 +25,4 @@ jobs:
           containerAppName: backendApi
           resourceGroup: dev
           targetPort: 8080
-          environmentVariables: "DB_USER=secretref:AZURE_CREDENTIALS DB_PASSWORD=secretref:AZURE_CREDENTIALS DB_SERVER=secretref:AZURE_CREDENTIALS"
+          environmentVariables: 'DB_USER=secretref:DB_USER DB_PASSWORD=secretref:DB_PASSWORD DB_SERVER=secretref:DB_SERVER'
