--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,4 +25,4 @@ jobs:
           containerAppName: backendApi
           resourceGroup: dev
           targetPort: 8080
-          environmentVariables: 'DB_USER=secretref:DB_USER DB_PASSWORD=secretref:DB_PASSWORD DB_SERVER=secretref:DB_SERVER'
+          environmentVariables: 'secretref:DB_USER=DB_USER secretref:DB_PASSWORD=DB_PASSWORD secretref:DB_SERVER=DB_SERVER'
