Update environment variable format in deployment workflow
The commit changes the way environment variables are declared in the deployment workflow file. It adopts a new format that

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,4 +25,6 @@ jobs:
           containerAppName: backendApi
           resourceGroup: dev
           targetPort: 8080
-          environmentVariables: 'secretref:DB_USER=DB_USER secretref:DB_PASSWORD=DB_PASSWORD secretref:DB_SERVER=DB_SERVER'
+          environmentVariables:
+            - name: hejsan
+              value: hejsan
