Update environment variable format in deployment workflow
The commit changes the way environment variables are declared in the deployment workflow file. The new format, which pairs names with values, is easier to read and manage. This change specifically improves the handling of secrets like 'DB_USER', 'DB_PASSWORD', and 'DB_SERVER' in the workflow.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,7 @@ jobs:
           containerAppName: backendApi
           resourceGroup: dev
           targetPort: 8080
-          environmentVariables:
-            - name: hejsan
-              value: hejsan
+          environmentVariables: >
+            DB_USER=secretref:DB_USER
+            DB_PASSWORD=secretref:DB_PASSWORD
+            DB_SERVER=secretref:DB_SERVER
