--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,5 @@ jobs:
           containerAppName: backendApi
           resourceGroup: dev
           targetPort: 8080
-          environmentVariables: >
-            DB_USER=secretref:DB_USER
-            DB_PASSWORD=secretref:DB_PASSWORD
-            DB_SERVER=secretref:DB_SERVER
+        env:
+          DB_USER: ${{ secrets.DB_USER }}
